--- a/generic/templates/generic/partials/partial_base.html
+++ b/generic/templates/generic/partials/partial_base.html
@@ -16,7 +16,7 @@
     <input type="hidden" id="input_sort_ascending" name="sort_ascending" value="{{ sort_ascending }}"/>
 {% endblock %}
 {% block list_wrapper %}
-    <table class="results">
+    <table  class="table results table-striped table-bordered table-hover table-media">
 {% endblock %}
 
 {% include partial_header %}
