--- a/generic/templates/generic/base.html
+++ b/generic/templates/generic/base.html
@@ -22,6 +22,9 @@
 <article class="span12 data-block">
 <header>
 							<h2>{{ title }}</h2>
+    {% block header%}
+
+        {% endblock %}
 
 						</header>
     <section>
