--- a/generic/templates/generic/base.html
+++ b/generic/templates/generic/base.html
@@ -18,6 +18,7 @@
 {% endblock %}
 
 {% block content %}
+    <div class="widget-container fluid-height col-md-12 icons ">
 <section class="container" role="main">
 <article class="span12 data-block">
 <header>
@@ -135,4 +136,5 @@
     </form>
     </section>
     </article>
+    </div>
 {% endblock %}
